UI alignment fixes

--- a/src/skins/vector/css/matrix-react-sdk/views/rooms/_RoomSettings.scss
+++ b/src/skins/vector/css/matrix-react-sdk/views/rooms/_RoomSettings.scss
@@ -84,7 +84,7 @@ limitations under the License.
 }
 
 .mx_RoomSettings_powerLevelKey {
-    text-align: right;
+    text-align: left;
     padding-right: 0.3em;
 }
 
